Add London Ruby User Group (LRUG)
The videos.yml file is generated by the lrug site and hosted at
https://lrug.org/rubyevents-video-playlist.yml so we've just copied it into the
rubyevents repo for this PR. Currently fixed at 2020 onwards as while we have
meetings on the site going back to 2006, all the links to recordings now go to
a private vimeo account due to the long-time venue / host going into
administration.

--- a/data/organisations.yml
+++ b/data/organisations.yml
@@ -1947,3 +1947,16 @@
   slug: xoruby
   language: english
   youtube_channel_id: ""
+
+- name: London Ruby User Group
+  website: https://lrug.org
+  github: https://github.com/lrug
+  mastodon: https://ruby.social/@lrug
+  twitter: lrug
+  youtube_channel_name: ''
+  kind: meetup
+  frequency: monthly
+  slug: lrug
+  language: english
+  youtube_channel_id: ''
+  default_country_code: UK
