--- a/data/lrug/playlists.yml
+++ b/data/lrug/playlists.yml
@@ -3,8 +3,8 @@
   location: "London, UK"
   description: "LRUG is a London-based community for anyone who is interested in the Ruby programming language, especially beginners."
   slug: lrug-meetup
-  featured_background: "#FFFFFF"
+  featured_background: "#FFF7B9"
   featured_color: "#c61300"
-  banner_background: '#fff7b9'
+  banner_background: "#FFF7B9"
   website: https://lrug.org/meetings/
-
+  type: "meetup"
